--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\chicharles\AppData\Local\Temp\testng-eclipse--477550260\testng-customsuite.xml</span>
+                    <span>C:\Users\chicharles\AppData\Local\Temp\testng-eclipse-1535002920\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="org.Rupeek.com.API.Testcase" hash-for-method="getUserDetails">getUserDetails</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="org.Rupeek.com.API.TestCases" hash-for-method="checkFirstNameLastNameAndCareerContainsOnlyAlphabets">checkFirstNameLastNameAndCareerContainsOnlyAlphabets</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="org.Rupeek.com.API.TestCases" hash-for-method="checkInValidCustomerDetails">checkInValidCustomerDetails</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="org.Rupeek.com.API.TestCases" hash-for-method="checkValidCustomerDetails">checkValidCustomerDetails</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +130,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">org.Rupeek.com.API.Testcase</span>
+              <span class="class-name">org.Rupeek.com.API.TestCases</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getUserDetails">
-                  </a> <!-- getUserDetails -->
-                  <span class="method-name">getUserDetails</span>
+                  <a name="checkFirstNameLastNameAndCareerContainsOnlyAlphabets">
+                  </a> <!-- checkFirstNameLastNameAndCareerContainsOnlyAlphabets -->
+                  <span class="method-name">checkFirstNameLastNameAndCareerContainsOnlyAlphabets</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkInValidCustomerDetails">
+                  </a> <!-- checkInValidCustomerDetails -->
+                  <span class="method-name">checkInValidCustomerDetails</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkValidCustomerDetails">
+                  </a> <!-- checkValidCustomerDetails -->
+                  <span class="method-name">checkValidCustomerDetails</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\chicharles\AppData\Local\Temp\testng-eclipse--477550260\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\chicharles\AppData\Local\Temp\testng-eclipse-1535002920\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +168,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;org.Rupeek.com.API.Testcase&quot;/&gt;
+      &lt;class name=&quot;org.Rupeek.com.API.TestCases&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +208,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getUserDetails')
-data.setCell(0, 2, 'org.Rupeek.com.API.Testcase')
-data.setCell(0, 3, 133);
+data.setCell(0, 1, 'checkFirstNameLastNameAndCareerContainsOnlyAlphabets')
+data.setCell(0, 2, 'org.Rupeek.com.API.TestCases')
+data.setCell(0, 3, 8);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'checkValidCustomerDetails')
+data.setCell(1, 2, 'org.Rupeek.com.API.TestCases')
+data.setCell(1, 3, 7);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'checkInValidCustomerDetails')
+data.setCell(2, 2, 'org.Rupeek.com.API.TestCases')
+data.setCell(2, 3, 3);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 133 ms</span>
+              <span class="suite-total-time">Total running time: 18 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,14 +251,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">org.Rupeek.com.API.Testcase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">org.Rupeek.com.API.TestCases</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">verifyAuthenticationAndGetAuthToken</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
+              <div class="configuration-test before">
+                <span class="method-name">GetCustomerDeatils</span>
+                <span class="method-start">3030 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">getUserDetails</span>
-                <span class="method-start">3302 ms</span>
+                <span class="method-name">checkFirstNameLastNameAndCareerContainsOnlyAlphabets</span>
+                <span class="method-start">3184 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkInValidCustomerDetails</span>
+                <span class="method-start">3197 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">checkValidCustomerDetails</span>
+                <span class="method-start">3207 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
