--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a60e3">  <td>20/07/03 20:31:41</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestCases.GetCustomerDeatils()[pri:0, instance:org.Rupeek.com.API.TestCases@4667ae56]">&gt;&gt;GetCustomerDeatils</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>20/07/03 20:31:41</td>   <td>150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.checkFirstNameLastNameAndCareerContainsOnlyAlphabets()[pri:0, instance:org.Rupeek.com.API.TestCases@4667ae56]">checkFirstNameLastNameAndCareerContainsOnlyAlphabets</td> 
-  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>20/07/03 20:31:41</td>   <td>167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.checkInValidCustomerDetails()[pri:0, instance:org.Rupeek.com.API.TestCases@4667ae56]">checkInValidCustomerDetails</td> 
-  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>20/07/03 20:31:41</td>   <td>177</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCases.checkValidCustomerDetails()[pri:0, instance:org.Rupeek.com.API.TestCases@4667ae56]">checkValidCustomerDetails</td> 
-  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="60a1bd">  <td>20/07/03 20:31:38</td>   <td>-3024</td> <td>&nbsp;</td><td title="&gt;&gt;BasePage.verifyAuthenticationAndGetAuthToken()[pri:0, instance:org.Rupeek.com.API.TestCases@4667ae56]">&gt;&gt;verifyAuthenticationAndGetAuthToken</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="60a1bd">  <td>20/07/04 14:28:45</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BasePage.verifyAuthenticationAndGetAuthToken()[pri:0, instance:org.Rupeek.com.API.AuthTestCases@5442a311]">&gt;&gt;verifyAuthenticationAndGetAuthToken</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690287238</td>   <td></td> </tr>
+<tr bgcolor="8a60e3">  <td>20/07/04 14:28:48</td>   <td>3281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AuthTestCases.verifyInvalidAuthenticationAndGetAuthToken()[pri:0, instance:org.Rupeek.com.API.AuthTestCases@5442a311]">verifyInvalidAuthenticationAndGetAuthToken</td> 
+  <td>main@1690287238</td>   <td></td> </tr>
 </table>
